--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('assets/Aswamedha_bg.png');
-            background-size: cover;
-            background-position: right;
             height: 100vh;
             display: flex;
             justify-content: left;
@@ -21,6 +18,22 @@
             color: white;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+            overflow: hidden;
+            position: relative;
+        }
+
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: url('assets/Aswamedha_bg.png');
+            background-size: cover;
+            background-position: right;
+            filter: blur(7px);
+            z-index: -1;
         }
 
         .text-container {
@@ -37,7 +50,6 @@
             position: relative;
             margin-bottom: 10px;
             margin: 0;
-            /* background-color: rgba(0, 0, 0, 0.5); */
             border-radius: 10px;
             font-family: 'MyWebFont';
         }
@@ -47,25 +59,33 @@
             font-family: 'Medula One';
             letter-spacing: 7px;
         }
-        @media screen and (max-width:1024px){
-            h1{
+
+        @media screen and (max-width: 1024px) {
+            h1 {
                 font-size: 6rem;
             }
-        }@media screen and (max-width:992px){
-            h1{
+        }
+
+        @media screen and (max-width: 992px) {
+            h1 {
                 font-size: 5rem;
             }
-            p1{
+
+            p1 {
                 font-size: 2em;
             }
-        }@media screen and (max-width:768px){
-            h1{
+        }
+
+        @media screen and (max-width: 768px) {
+            h1 {
                 font-size: 10vw;
             }
-            p1{
+
+            p1 {
                 font-size: 7vw;
             }
-            .text-container{
+
+            .text-container {
                 padding: 0 10px;
             }
         }
