added postponed and removed stallian rises

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
             padding: 0 40px;
         }
 
+        .right_text {
+            width: auto;
+            height: auto;
+            background-color: red;
+            border-radius: 20px;
+            margin-top: 20px;
+            text-align: center;
+        }
+
         @font-face {
             font-family: 'MyWebFont';
             src: url('./assets/Fonts/IFC\ LOS\ BANDITOS.ttf');
@@ -94,8 +103,11 @@
 
 <body>
     <div class="text-container">
-        <h1>Ashwamedha 2023</h1>
-        <p1>The Stallion Rises Soon...</p1>
+        <h1>Ashwamedha</h1>
+        <!-- <p1>The Stallion Rises</p1> -->
+        <div class="right_text">
+            <h1>Postponed</h1>
+        </div>
     </div>
 </body>
 
